k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchange-api
  labels:
    app: exchange-api
spec:
  type: ClusterIP
  selector:
    app: exchange-api
  ports:
    - name: http
      port: 4000
      targetPort: http
