k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchange-web
  labels:
    app: exchange-web
spec:
  type: ClusterIP
  selector:
    app: exchange-web
  ports:
    - name: http
      port: 3000
      targetPort: http
